try to fix touch on iOS

--- a/work/float.css
+++ b/work/float.css
@@ -12,11 +12,6 @@
   text-align:center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
 }
-#float:hover{
-  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.3);
-  color: #fff;
-  cursor: pointer;
-}
 #float div{width: 60px;height: 60px;}
 .my-float{margin-top:20px;}
 
@@ -48,4 +43,11 @@
   text-decoration: none;
   color: rgba(0,0,0,0.76);
   font-weight: 500;
+}
+@media only screen and (min-width: 768px){
+  #float:hover{
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.3);
+    color: #fff;
+    cursor: pointer;
+  }
 }
